--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "norne"]
 	path = norne
 	url = git@github.com:ltgoslo/norne.git
+[submodule "UD_Norwegian-Nynorsk"]
+	path = UD_Norwegian-Nynorsk
+	url = git@github.com:UniversalDependencies/UD_Norwegian-Nynorsk.git
