--- a/.gitmodules
+++ b/.gitmodules
@@ -2,11 +2,11 @@
 	path = NARC
 	url = git@github.com:ltgoslo/NARC.git
 [submodule "UD_Norwegian-Bokmaal"]
-	path = UD_Norwegian-Bokmaal
+	path = UD/UD_Norwegian-Bokmaal
 	url = git@github.com:UniversalDependencies/UD_Norwegian-Bokmaal.git
 [submodule "norne"]
-	path = norne
+	path = NorNE
 	url = git@github.com:ltgoslo/norne.git
 [submodule "UD_Norwegian-Nynorsk"]
-	path = UD_Norwegian-Nynorsk
+	path = UD/UD_Norwegian-Nynorsk
 	url = git@github.com:UniversalDependencies/UD_Norwegian-Nynorsk.git
