--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "UD_Norwegian-Nynorsk"]
 	path = UD/UD_Norwegian-Nynorsk
 	url = git@github.com:UniversalDependencies/UD_Norwegian-Nynorsk.git
+[submodule "validation/corefconversion"]
+	path = validation/corefconversion
+	url = git@github.com:boberle/corefconversion.git
