update to new structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 **/.DS_Store
-NARC/annotations_conll*
-NARC/annotations_jsonlines*
-NARC/UD*
+output/*
 __pycache__/*
 *.py[cod]
 *$py.class
 *.pyc
 *.pyd
 *.pyo
-data/narc-merged/annotations*
-data/narc-merged/UD_*
-
-
